--- a/config.yaml
+++ b/config.yaml
@@ -28,8 +28,9 @@ eval:
   LSH_k_bits: 32
 data_generation:
   level: 0 # Levels are numbered from 0 (the highest resolution) to level_count - 1
-  image_dir: ./
-  skip_images: [6,
-                8]
-  output_dir: ./
-  n_images: 1000
+  image_dir: ./data/WSS2/
+  output_dir: ./data/VAE_data/train/
+  skip_images: ['6.svs',
+                '8.svs']
+  n_images: 10
+  tile_size: [224, 224]
