--- a/config.yaml
+++ b/config.yaml
@@ -44,6 +44,7 @@ fit_VAE:
   in_channels: 3
   lattent_dims: 64
   hidden_dims: []
-  batch_size: 10
-  lr: 0.00001
+  KLD_weigth: 1
+  batch_size: 20
+  lr: 0.0001
   max_steps: 1000
