Cross Entropy loss added

--- a/config.yaml
+++ b/config.yaml
@@ -36,16 +36,18 @@ data_generation:
   tile_size: [224, 224]
 fit_VAE:
   load_checkpoint: False
-  load_path: ./models/VAE_checkpoint
+  load_path: ./models/Checkpoints/8k_steps_0.0001_lr_[16,32,64,128,256]
   save_every_steps: 100
   save_path: ./models/VAE_checkpoint
   image_dir: ./data/VAE_data/train/
   input_size: 224
   in_channels: 3
-  lattent_dims: 128
+  lattent_dims: 64
   hidden_dims: []
+  recons_loss: ce
   KLD_weigth: 1
   batch_size: 20
   lr: 0.0001
   max_steps: 5
-  sample_after_training: True
+  sample_after_training: False
+  n_samples: 4
