--- a/config.yaml
+++ b/config.yaml
@@ -44,10 +44,10 @@ fit_VAE:
   input_size: 224
   in_channels: 3
   lattent_dims: 64
-  hidden_dims: [16,32,64,128,256]
-  recons_loss: mae
+  hidden_dims: [8,16,32,64,128]
+  recons_loss: ssim
   KLD_weight: 0.5
-  var_weight: 10
+  var_weight: 0
   batch_size: 20
   lr: 0.0001
   max_steps: 0
