--- a/config.yaml
+++ b/config.yaml
@@ -35,13 +35,14 @@ data_generation:
   n_images: 1000
   tile_size: [224, 224]
 fit_VAE:
+  use_MNIST: True
   skip_background: True
-  load_checkpoint: True
+  load_checkpoint: False
   load_path: ./models/VAE_checkpoint
   save_every_steps: 100
   save_path: ./models/VAE_checkpoint
   image_dir: ./data/VAE_data/train/
-  input_size: 224
+  input_size: 64
   in_channels: 3
   lattent_dims: 64
   hidden_dims: [8,16,32,64,128]
@@ -50,6 +51,6 @@ fit_VAE:
   var_weight: 0
   batch_size: 20
   lr: 0.0001
-  max_steps: 5
+  max_steps: 500
   sample_after_training: True
   n_samples: 4
