--- a/config.yaml
+++ b/config.yaml
@@ -45,12 +45,13 @@ fit_VAE:
   input_size: 64
   in_channels: 3
   lattent_dims: 64
-  hidden_dims: [8,16,32,64,128]
-  recons_loss: mae
+  hidden_dims: [64,128,256,512,1024]
+  recons_loss: mse
   KLD_weight: 1
   var_weight: 0
   batch_size: 20
   lr: 0.0001
-  max_steps: 400
+  weight_decay: 0.00001
+  max_steps: 1000
   sample_after_training: True
   n_samples: 4
