--- a/config.yaml
+++ b/config.yaml
@@ -45,13 +45,14 @@ fit_VAE:
   input_size: 64
   in_channels: 3
   lattent_dims: 64
-  hidden_dims: [64,128,256,512,1024]
-  recons_loss: mse
+  hidden_dims: [16,32,64,128,256]
+  n_conv_layers: 2
+  recons_loss: mae
   KLD_weight: 1
   var_weight: 0
-  batch_size: 20
-  lr: 0.0001
-  weight_decay: 0.00001
-  max_steps: 1000
+  batch_size: 1
+  lr: 0.00001
+  weight_decay: 0.0001
+  max_steps: 20000
   sample_after_training: True
   n_samples: 4
