--- a/config.yaml
+++ b/config.yaml
@@ -196,18 +196,22 @@ fit_scalenet:
   train_path: /home/artem/dev/Content-Based-Image-Retrieval/WSI_scale_data/train
   eval_path: /home/artem/dev/Content-Based-Image-Retrieval/WSI_scale_data/eval
   summarywriter_logdir: tensorboard_logs
+  checkpoint_path: /home/artem/dev/Content-Based-Image-Retrieval/Checkpoints/ScaleNet/checkpoint
+  load_from_checkpoint: False
+  save_every_steps: 1000
   log_every_steps: 10
   input_size: 224
   grayscale_input: False
   conv_hidden_dims: [16,32,64,128,256]
   conv_out_size: 2
-  fc_hidden_dims: [256,64,16]
+  fc_hidden_dims: [128,32]
   eval_only: False
   batch_size: 64
   n_batches: 1
-  training_steps: 10000
-  eval_every_steps: 1000
-  lr: 1e-3
+  training_steps: 200000
+  eval_every_steps: 500
+  eval_num_steps: 100
+  lr: 1e-4
   weight_decay: 0
 extractor_visualization:
   visualization_type: knn_distance
