--- a/config.yaml
+++ b/config.yaml
@@ -138,8 +138,15 @@ feature_extractors:
             [ 16,32,32,64,64 ] # hidden_dims
         ]
       ]
-binary_features_serialization:
-  path: ./temp/
+features_serialization:
+  path: /home/artem/dev/Content-Based-Image-Retrieval/CBIR_serialized
+scalenet:
+  checkpoint_path: /home/artem/dev/Content-Based-Image-Retrieval/CBIR/models/ScaleNet_best_[16,32,64,128,256]_[128,32]
+  input_size: 224
+  grayscale_input: False
+  conv_hidden_dims: [ 16,32,64,128,256 ]
+  conv_out_size: 2
+  fc_hidden_dims: [ 128,32 ]
 eval:
   data_path: ./data/eval/patches-wsi-224-val-z2/
   classes: [
@@ -151,7 +158,7 @@ eval:
   ]
   feature_extractor_type: VAE
   feature_extractor: ${feature_extractors.${eval.feature_extractor_type}}
-  binary_features_serialization: ${binary_features_serialization}
+  features_serialization: ${features_serialization}
   tile_size: 112
   save_results: False
   top_n: 10
@@ -159,11 +166,17 @@ eval:
 CBIR_test:
   feature_extractor_type: stat
   feature_extractor: ${feature_extractors.${CBIR_test.feature_extractor_type}}
-  binary_features_serialization: ${binary_features_serialization}
+  features_serialization: ${features_serialization}
+  scalenet: ${scalenet}
+  scale_detection:
+    test_wsi: /home/artem/data/PATH-DT-MSU-WSI/WSS2/01.svs
+    scales: [5, 10, 15, 20, 25, 30, 35, 40]
+    n_samples: 20
   tile_size: 112
-  save_results: True
+  save_results: False
   top_n: 10
   LSH_k_bits: 16
+  query: /home/artem/dev/Content-Based-Image-Retrieval/test_search_data/x5_0.jpg
 data_generation:
   level: 1 # Levels are numbered from 0 (the highest resolution) to level_count - 1
   image_dir: ./data/WSS2/
