--- a/config.yaml
+++ b/config.yaml
@@ -12,130 +12,20 @@ feature_extractors:
     type: VAE
     nn_config: local
     args: ${feature_extractors.VAE.VAE_args.${feature_extractors.VAE.nn_config}}
-    n_features: 64
+    n_features: 32
     VAE_args:
       local: [
         # model_path
-          '/home/artem/dev/CBIR/CBIR/models/VAE_checkpoint',
+#           '/home/artem/dev/Content-Based-Image-Retrieval/CBIR/models/VAE_checkpoint',
+#            '/home/artem/dev/Content-Based-Image-Retrieval/Checkpoints/VAE/AE_checkpoint_[16,32,64,128,256,512]_256_192_2',
+            '/home/artem/dev/Content-Based-Image-Retrieval/Checkpoints/VAE_checkpoint',
         # model_params
         [
             192, # input_size
-            3, #in_channels
-            64, #latent_dims
-            [ 16,32,64,64,128,128 ], # hidden_dims
-            1 # n_conv_layers
-        ]
-      ]
-      big_lattent_1024: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_[64,128,256,256,512]_n_conv_2_input_224_latent_1024',
-        # model_params
-        [
-            224, # input_size
-            3, #in_channels
-            1024, #latent_dims
-            [ 64,128,256,256,512 ], # hidden_dims
-            2 # n_conv_layers
-        ]
-      ]
-      small_lattent_1024: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_[32,32,64,64,128]_n_conv_1_input_224_latent_1024',
-        # model_params
-        [
-            224, # input_size
-            3, #in_channels
-            1024, #latent_dims
-            [ 32,32,64,64,128 ] # hidden_dims
-        ]
-      ]
-      background_lattent_256: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_back_[32,32,64,64,128]_n_conv_1_input_224_latent_256',
-        # model_params
-        [
-            224, # input_size
-            3, #in_channels
-            256, #latent_dims
-            [ 32,32,64,64,128 ] # hidden_dims
-        ]
-      ]
-      background_lattent_64: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_level_1_back_[32,32,64,64,128]_n_conv_1_input_224_latent_64',
-        # model_params
-        [
-            224, # input_size
-            3, #in_channels
-            64, #latent_dims
-            [ 32,32,64,64,128 ] # hidden_dims
-        ]
-      ]
-      lattent_64: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_level_1_[16,32,64,64,128,128]_n_conv_1_input_192_latent_64',
-        # model_params
-        [
-            192, # input_size
-            3, #in_channels
-            64, #latent_dims
-            [ 16,32,64,64,128,128 ] # hidden_dims
-        ]
-      ]
-      lattent_48: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_level_1_[16,32,64,64,128,128]_n_conv_1_input_192_latent_48',
-        # model_params
-        [
-            192, # input_size
-            3, #in_channels
-            48, #latent_dims
-            [ 16,32,64,64,128,128 ] # hidden_dims
-        ]
-      ]
-      big_lattent_32: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_level_1_[64,128,256,256,512]_n_conv_2_input_224_latent_32',
-        # model_params
-        [
-            224, # input_size
             3, #in_channels
             32, #latent_dims
-            [64,128,256,256,512], # hidden_dims
+            [ 16, 32, 64, 128, 256, 512 ], # hidden_dims
             2 # n_conv_layers
-        ]
-      ]
-      lattent_32: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_level_1_[16,32,64,64,128]_n_conv_1_input_224_latent_32',
-        # model_params
-        [
-            224, # input_size
-            3, #in_channels
-            32, #latent_dims
-            [ 16,32,64,64,128 ] # hidden_dims
-        ]
-      ]
-      small_lattent_16: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_level_1_[8,16,32,32,64]_n_conv_1_input_224_latent_16',
-        # model_params
-        [
-            224, # input_size
-            3, #in_channels
-            16, #latent_dims
-            [ 8,16,32,32,64 ] # hidden_dims
-        ]
-      ]
-      lattent_16: [
-        # model_path
-          './CBIR/models/Checkpoints/VAE_level_1_[16,32,32,64,64]_n_conv_1_input_224_latent_16',
-        # model_params
-        [
-            224, # input_size
-            3, #in_channels
-            16, #latent_dims
-            [ 16,32,32,64,64 ] # hidden_dims
         ]
       ]
 features_serialization:
@@ -148,21 +38,37 @@ scalenet:
   conv_out_size: 2
   fc_hidden_dims: [ 128,32 ]
 eval:
-  data_path: ./data/eval/patches-wsi-224-val-z2/
+  data_path: /home/artem/data/PATH-DT-MSU-WSI/patches-wsi-224-val-z2-balanced/
   classes: [
     { name: AT, n_queries: 10 },
-    { name: BG, n_queries: 10 },
+#    { name: BG, n_queries: 10 },
     { name: LP, n_queries: 10 },
     { name: MM, n_queries: 10 },
     { name: TUM, n_queries: 10 }
   ]
-  feature_extractor_type: VAE
+#  data_path: /home/artem/data/NCT-CRC-HE-100K/
+#  classes: [
+#    { name: ADI, n_queries: 10 },
+#    { name: BACK, n_queries: 10 },
+#    { name: DEB, n_queries: 10 },
+#    { name: LYM, n_queries: 10 },
+#    { name: MUC, n_queries: 10 },
+#    { name: MUS, n_queries: 10 },
+#    { name: NORM, n_queries: 10 },
+#    { name: STR, n_queries: 10 },
+#    { name: TUM, n_queries: 10 },
+#  ]
+  feature_extractor_type: stat
   feature_extractor: ${feature_extractors.${eval.feature_extractor_type}}
+  binarization: True
+  filter: 'c2' # 'c2'/'no filter'
+  distance: 'c2_d_near' # 'mse'/'c2_d_near'/'c2_d_ave'
   features_serialization: ${features_serialization}
-  tile_size: 112
+  tile_size: 192
   save_results: False
   top_n: 10
   LSH_k_bits: 16
+  scalenet: ${scalenet}
 CBIR_test:
   feature_extractor_type: stat
   feature_extractor: ${feature_extractors.${CBIR_test.feature_extractor_type}}
@@ -172,45 +78,61 @@ CBIR_test:
     test_wsi: /home/artem/data/PATH-DT-MSU-WSI/WSS2/01.svs
     scales: [5, 10, 15, 20, 25, 30, 35, 40]
     n_samples: 20
-  tile_size: 112
-  save_results: False
+  tile_size: 192
+  save_results: True
   top_n: 10
+  binarization: True
+  filter: 'c2' # 'c2'/'no filter'
+  distance: 'c2_d_near' # 'mse'/'c2_d_near'/'c2_d_ave'
   LSH_k_bits: 16
-  query: /home/artem/dev/Content-Based-Image-Retrieval/test_search_data/x5_0.jpg
+  query: /home/artem/data/PATH-DT-MSU-WSI/patches-wsi-224-val-z2/TUM/000010.jpg
 data_generation:
   level: 1 # Levels are numbered from 0 (the highest resolution) to level_count - 1
-  image_dir: ./data/WSS2/
-  output_dir: ./data/VAE_data/train/
+  image_dir: /home/artem/data/PATH-DT-MSU-WSI/WSS2/
+  output_dir: /home/artem/dev/Content-Based-Image-Retrieval/VAE_data/train/
   skip_images: [ '6.svs',
                  '8.svs' ]
-  n_images: 100
+  n_images: 100000
   tile_size: [ 224, 224 ]
 fit_VAE:
+  use_AE: True
   use_MNIST: False
   skip_background: True
   load_checkpoint: False
-  load_path: ./CBIR/models/VAE_checkpoint
+  load_path: /home/artem/dev/Content-Based-Image-Retrieval/Checkpoints/VAE_checkpoint
   save_every_steps: 100
-  save_path: ./CBIR/models/VAE_checkpoint
-  image_dir: [
-      /home/artem/dev/CBIR/data/eval/patches-wsi-224-val-z2/AT/,
-#      { path: /home/artem/dev/CBIR/data/eval/patches-wsi-224-val-z2/BG/, name: BG },
-      /home/artem/dev/CBIR/data/eval/patches-wsi-224-val-z2/LP/,
-      /home/artem/dev/CBIR/data/eval/patches-wsi-224-val-z2/MM/,
-      /home/artem/dev/CBIR/data/eval/patches-wsi-224-val-z2/TUM/,
-    ]
+  save_path: /home/artem/dev/Content-Based-Image-Retrieval/Checkpoints/VAE_checkpoint
+  image_dir: /home/artem/dev/Content-Based-Image-Retrieval/VAE_data/train
+#  image_dir: [
+#    '/home/artem/data/PATH-DT-MSU-WSI/patches-wsi-224-val-z2/AT/',
+#    '/home/artem/data/PATH-DT-MSU-WSI/patches-wsi-224-val-z2/LP/',
+#    '/home/artem/data/PATH-DT-MSU-WSI/patches-wsi-224-val-z2/MM/',
+#    '/home/artem/data/PATH-DT-MSU-WSI/patches-wsi-224-val-z2/TUM/',
+#  ]
+#  image_dir: [
+#    '/home/artem/data/NCT-CRC-HE-100K/ADI/',
+#    '/home/artem/data/NCT-CRC-HE-100K/BACK/',
+#    '/home/artem/data/NCT-CRC-HE-100K/DEB/',
+#    '/home/artem/data/NCT-CRC-HE-100K/LYM/',
+#    '/home/artem/data/NCT-CRC-HE-100K/MUC/',
+#    '/home/artem/data/NCT-CRC-HE-100K/MUS/',
+#    '/home/artem/data/NCT-CRC-HE-100K/NORM/',
+#    '/home/artem/data/NCT-CRC-HE-100K/STR/',
+#    '/home/artem/data/NCT-CRC-HE-100K/TUM/',
+#  ]
+  summarywriter_logdir: tensorboard_logs
   input_size: 192
   in_channels: 3
-  lattent_dims: 64
-  hidden_dims: [ 16,32,64,64,128,128 ]
-  n_conv_layers: 1
-  recons_loss: ce
-  KLD_weight: 0.00001
+  lattent_dims: 32
+  hidden_dims: [ 16, 32, 64, 128, 256, 512 ]
+  n_conv_layers: 2
+  recons_loss: mse
+  KLD_weight: 0.0000001
   var_weight: 0
-  batch_size: 16
+  batch_size: 8
   lr: 0.00005
-  weight_decay: 0.0
-  max_steps: 2000
+  weight_decay: 0
+  max_steps: 1000000
   sample_after_training: True
   n_samples: 4
 fit_scalenet:
