--- a/config/fit_contrastive_extractor/fit_contrastive_extractor.yaml
+++ b/config/fit_contrastive_extractor/fit_contrastive_extractor.yaml
@@ -1,18 +1,37 @@
-batch_size: 32
+batch_size: 64
 wsi_paths: [
   '/home/artem/data/PATH-DT-MSU-WSI/WSS1/01.svs',
   '/home/artem/data/PATH-DT-MSU-WSI/WSS1/02.svs',
   '/home/artem/data/PATH-DT-MSU-WSI/WSS1/03.svs',
   '/home/artem/data/PATH-DT-MSU-WSI/WSS1/04.svs',
   '/home/artem/data/PATH-DT-MSU-WSI/WSS1/05.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS1/06.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS1/07.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS1/08.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS1/09.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS1/10.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS2/01.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS2/02.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS2/03.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS2/04.svs',
+  '/home/artem/data/PATH-DT-MSU-WSI/WSS2/05.svs',
 ]
 wsi_scale: 40
 tile_size: 224
 level: 1 # [0, 1, 2, ...], where 0 means max scaling
 filter_background: True
-n_steps: 1000000
+n_steps: 100000
 log_every_steps: 1
 summarywriter_logdir: tensorboard_logs
+save_every_steps: 100
+checkpoint_path: /home/artem/dev/Content-Based-Image-Retrieval/Checkpoints/ContrastiveExtractor/checkpoint
+cos_margin: -0.2
+embedding_size: 48
+values_penalty: 0.05
+lr: 0.0005
+load_from_checkpoint: False
+small_values_penalty_alpha: 1.0
+euclidean_loss_margin: 3
 
 defaults:
   - augmentation: augmentation
