--- a/config/eval/eval.yaml
+++ b/config/eval/eval.yaml
@@ -19,15 +19,16 @@ classes: [
 #  { name: STR, n_queries: 10 },
 #  { name: TUM, n_queries: 10 },
 #]
-feature_extractor_type: stat
+feature_extractor_type: merged_stat_contrastive
 feature_extractor: ${feature_extractors.${eval.feature_extractor_type}}
 binarization: False
 filter: 'no filter' # 'c2'/'no filter'
-distance: 'mse' # 'mae'/'mse'/'c2_d_near'/'c2_d_ave'
+distance: 'mse' # 'mae'/'mse'/'mape'/'mape_modified'/'c2_d_near'/'c2_d_ave'
 features_serialization: ${features_serialization}
 tile_size: 224
-save_results: False
+save_results: True
 top_n: 10
 LSH_k_bits: 16
 scalenet: ${scalenet}
 log_search: False
+metric: 'mean'
