--- a/config/feature_extractors/feature_extractors.yaml
+++ b/config/feature_extractors/feature_extractors.yaml
@@ -30,7 +30,28 @@ Contrastive:
   type: Contrastive
   args: [
     # model_path
+#    '/home/artem/dev/Content-Based-Image-Retrieval/CBIR/models/contrastive_extractor_48_[8, 16, 32, 64, 128]_2_128',
+#    '/home/artem/dev/Content-Based-Image-Retrieval/CBIR/models/msu_contrastive_extractor_48_[8, 16, 32, 64, 128]_2_128',
     '/home/artem/dev/Content-Based-Image-Retrieval/Checkpoints/ContrastiveExtractor/checkpoint',
+    [
+#      224, # input_size
+      112, # input_size
+#      [8, 16, 32, 64, 128], # conv_hidden_dims
+      [16, 32, 64, 128, 256, 512], # conv_hidden_dims
+      2, # conv_out_size
+#      [128], # fc_hidden_dims
+      [256], # fc_hidden_dims
+#      48 # embedding_size
+      128 # embedding_size
+    ]
+  ]
+  n_features: 48
+merged_stat_contrastive:
+  type: merged_stat_contrastive
+  args: [
+    # model_path
+#    '/home/artem/dev/Content-Based-Image-Retrieval/CBIR/models/contrastive_extractor_48_[8, 16, 32, 64, 128]_2_128',
+    '/home/artem/dev/Content-Based-Image-Retrieval/CBIR/models/msu_contrastive_extractor_48_[8, 16, 32, 64, 128]_2_128',
     [
       224, # input_size
       [8, 16, 32, 64, 128], # conv_hidden_dims
@@ -39,4 +60,4 @@ Contrastive:
       48 # embedding_size
     ]
   ]
-  n_features: 48
+  n_features: ${feature_extractors.stat.n_features} + ${feature_extractors.Contrastive.n_features}
