--- a/config/CBIR_test/CBIR_test.yaml
+++ b/config/CBIR_test/CBIR_test.yaml
@@ -2,8 +2,8 @@ data_path: /home/artem/data/CBIR_other_data/arcDataset/
 classes: [
   { name: cropped }
 ]
-#feature_extractor_type: stat
-feature_extractor_type: Contrastive
+feature_extractor_type: stat
+#feature_extractor_type: Contrastive
 #feature_extractor_type: merged_stat_contrastive
 feature_extractor: ${feature_extractors.${CBIR_test.feature_extractor_type}}
 features_serialization: ${features_serialization}
@@ -12,44 +12,14 @@ save_results: True
 top_n: 10
 binarization: False
 filter: 'no filter' # 'c2'/'no filter'
-distance: 'mse' # 'mae'/'mse'/'mape'/'mape_modified'/'c2_d_near'/'c2_d_ave'
+distance: 'mae' # 'mae'/'mse'/'mape'/'mape_modified'/'c2_d_near'/'c2_d_ave'
 LSH_k_bits: 16
 query: [
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/235.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/196.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/185.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/74.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/0.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/10.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/20.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/30.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/40.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/50.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/60.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/70.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/80.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/90.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/100.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/110.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/120.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/130.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/140.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/150.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/160.jpg,
-  /home/artem/data/CBIR_other_data/arcDataset/cropped/170.jpg, #
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/180.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/190.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/200.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/210.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/220.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/230.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/240.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/250.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/260.jpg,
-  /home/artem/data/CBIR_other_data/arcDataset/cropped/270.jpg, #
-  /home/artem/data/CBIR_other_data/arcDataset/cropped/280.jpg, #
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/290.jpg,
-#  /home/artem/data/CBIR_other_data/arcDataset/cropped/300.jpg,
+  /home/artem/data/CBIR_other_data/arcDataset/cropped/10.jpg,
+  /home/artem/data/CBIR_other_data/arcDataset/cropped/130.jpg,
+  /home/artem/data/CBIR_other_data/arcDataset/cropped/240.jpg,
+  /home/artem/data/CBIR_other_data/arcDataset/cropped/310.jpg,
+  /home/artem/data/CBIR_other_data/arcDataset/cropped/620.jpg,
 ]
 
 scalenet: ${scalenet}
