--- a/config/feature_extractors/feature_extractors.yaml
+++ b/config/feature_extractors/feature_extractors.yaml
@@ -32,17 +32,18 @@ Contrastive:
     # model_path
 #    '/home/artem/dev/Content-Based-Image-Retrieval/CBIR/models/contrastive_extractor_48_[8, 16, 32, 64, 128]_2_128',
 #    '/home/artem/dev/Content-Based-Image-Retrieval/CBIR/models/msu_contrastive_extractor_48_[8, 16, 32, 64, 128]_2_128',
-    '/home/artem/dev/Content-Based-Image-Retrieval/Checkpoints/ContrastiveExtractor/no_segm',
+    '/home/artem/dev/Content-Based-Image-Retrieval/Checkpoints/ContrastiveExtractor/checkpoint',
     [
-#      224, # input_size
-      112, # input_size
+      224, # input_size
+#      112, # input_size
 #      [8, 16, 32, 64, 128], # conv_hidden_dims
       [16, 32, 64, 128, 256, 512], # conv_hidden_dims
       2, # conv_out_size
 #      [128], # fc_hidden_dims
       [256], # fc_hidden_dims
 #      48 # embedding_size
-      128 # embedding_size
+#      128 # embedding_size
+      256 # embedding_size
     ]
   ]
   n_features: 48
